[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/dialogue-bg.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/portrait-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/next.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/TextBlock.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/Dialogue.gd" type="Script" id=6]

[node name="Dialogue" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="LeftTextBG" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 204.0
margin_bottom = 182.0
texture = ExtResource( 1 )

[node name="LeftPortraitBG" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 128.0
margin_right = 56.0
margin_bottom = 168.0
texture = ExtResource( 2 )

[node name="RightTextBG" type="TextureRect" parent="."]
margin_left = 176.0
margin_top = 128.0
margin_right = 316.0
margin_bottom = 182.0
texture = ExtResource( 1 )

[node name="RightPortraitBG" type="TextureRect" parent="."]
margin_left = 272.0
margin_top = 128.0
margin_right = 312.0
margin_bottom = 168.0
texture = ExtResource( 2 )

[node name="LeftPortrait" type="TextureRect" parent="."]
margin_left = 18.0
margin_top = 130.0
margin_right = 58.0
margin_bottom = 170.0

[node name="RightPortrait" type="TextureRect" parent="."]
margin_left = 274.0
margin_top = 130.0
margin_right = 314.0
margin_bottom = 170.0

[node name="LeftText" parent="." instance=ExtResource( 5 )]
position = Vector2( 72, 136 )
scale = Vector2( 0.75, 0.75 )
text = "Hi, how are you?"
line_width = 96
lower_padding = 1
space_size = 4
immediate = false
font = "ui_medium"

[node name="RightText" parent="." instance=ExtResource( 5 )]
position = Vector2( 184, 136 )
scale = Vector2( 0.75, 0.75 )
text = "Pretty good ty."
line_width = 96
lower_padding = 1
space_size = 4
immediate = false
font = "ui_medium"

[node name="LeftNext" type="TextureRect" parent="."]
margin_left = 146.0
margin_top = 150.0
margin_right = 186.0
margin_bottom = 190.0
texture = ExtResource( 3 )

[node name="RightNext" type="TextureRect" parent="."]
margin_left = 258.0
margin_top = 150.0
margin_right = 298.0
margin_bottom = 190.0
texture = ExtResource( 3 )
